# Stoqo

./: README.md
.github/workflows/: flutter_build.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: alerts.py  auth.py  branches.py  inventory.py  products.py  purchases.py  router.py  sync.py  transfers.py  websocket.py
backend/app/core/: config.py  database.py  deps.py  redis.py  security.py
backend/app/models/: __init__.py  alert.py  branch.py  conflict.py  movement.py  product.py  purchase.py  sync.py  transfer.py  user.py
backend/app/repositories/: alert.py  base.py  movement.py  product.py  sync.py  user.py
backend/app/schemas/: alert.py  auth.py  branch.py  conflict.py  movement.py  product.py  purchase.py  sync.py  transfer.py  user.py
backend/app/services/: alert_service.py  auth_service.py  conflict_service.py  inventory_service.py  sync_service.py  transfer_service.py
backend/app/workers/: low_stock_worker.py  reconciliation_worker.py
backend/scripts/: seed.py
stoqomobile/: README.md  analysis_options.yaml  pubspec.yaml
stoqomobile/android/: gradle.properties
stoqomobile/android/app/: build.gradle.kts
stoqomobile/ios/Runner/: Info.plist
stoqomobile/ios/Runner.xcodeproj/: project.pbxproj
stoqomobile/lib/: app.dart  main.dart
stoqomobile/linux/: CMakeLists.txt
stoqomobile/test/: widget_test.dart
stoqomobile/web/: index.html  manifest.json
stoqomobile/windows/: CMakeLists.txt
(+65 files in other folders)
